# rinha-2024q1

./: docker-compose.yml  flake.nix  rinha-server.cabal
src/: Main.hs
src/Controllers/: InsertTransaction.hs
src/Domain/: Context.hs  Transaction.hs
src/Infra/Redis/: Transaction.hs
tests/: playground.http
