cabal-version:   3.0
name:            rinha-server
version:         0.1.0
license:         NONE
author:          Edu Renesto
maintainer:      edure95@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    other-modules:    Controllers.InsertTransaction
                    , Domain.Context
                    , Domain.Transaction
                    , Infra.Redis.Transaction
    build-depends:    base
                    , scotty==0.21
                    , warp
                    , mtl
                    , hedis
                    , aeson
                    , http-types
    hs-source-dirs:   src
    default-language: Haskell2010
